<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>3.1.3</version>
    <relativePath/>
  </parent>

  <groupId>md.fuel.ecosystem</groupId>
  <artifactId>ecosystem</artifactId>
  <version>1.0.0</version>
  <packaging>pom</packaging>
  <name>Application Ecosystem of Moldavian Filling Stations</name>
  <description>Application Ecosystem of Moldavian Filling Stations for working with real-time data.</description>

  <modules>
    <module>rest-api</module>
    <module>telegram-bot</module>
    <module>contract-generator</module>
    <module>report-aggregate</module>
  </modules>

  <properties>
    <java.version>20</java.version>
    <skip.unit.tests>false</skip.unit.tests>
    <skip.integration.tests>false</skip.integration.tests>

    <!--SPRING FAMILY-->
    <spring.boot.parent.version>3.1.3</spring.boot.parent.version>
    <telegrambots.spring.boot.starter.version>6.8.0</telegrambots.spring.boot.starter.version>
    <springdoc.openapi.starter.webmvc.ui.version>2.2.0</springdoc.openapi.starter.webmvc.ui.version>

    <!--TOOLS-->
    <proj4j.version>1.3.0</proj4j.version>
    <mapstruct.version>1.5.5.Final</mapstruct.version>
    <javax.cache.version>1.1.1</javax.cache.version>
    <org.ehcache.version>3.10.8</org.ehcache.version>
    <lombok.mapstruct.binding.version>0.2.0</lombok.mapstruct.binding.version>
    <jackson.databind.nullable.version>0.2.6</jackson.databind.nullable.version>
    <java.ngrok.version>2.1.0</java.ngrok.version>
    <spotbugs.version>4.7.3</spotbugs.version>
    <swagger.annotations.jakarta.version>2.2.15</swagger.annotations.jakarta.version>
    <jakarta.validation.api.version>3.0.2</jakarta.validation.api.version>

    <!--INTERNAL PROJECTS-->
    <contract.generator.version>1.0.0</contract.generator.version>

    <!--TESTING-->
    <mockito.inline.version>5.2.0</mockito.inline.version>
    <wiremock.version>2.35.0</wiremock.version>

    <!--DATABASE-->
    <h2.version>2.2.220</h2.version>
    <postgresql.version>42.6.0</postgresql.version>

    <!--MAVEN PLUGINS-->
    <maven.compiler.plugin.version>3.11.0</maven.compiler.plugin.version>
    <openapi.generator.maven.plugin.version>7.0.0</openapi.generator.maven.plugin.version>
    <maven.failsafe.plugin.version>3.1.2</maven.failsafe.plugin.version>
    <build.helper.maven.plugin.version>3.4.0</build.helper.maven.plugin.version>
    <dependency.check.maven.version>8.4.0</dependency.check.maven.version>
    <maven.checkstyle.plugin.version>3.3.0</maven.checkstyle.plugin.version>
    <builder.helper.maven.plugin.version>3.4.0</builder.helper.maven.plugin.version>
    <jacoco.maven.plugin.version>0.8.10</jacoco.maven.plugin.version>
    <maven.surefire.plugin.version>3.1.2</maven.surefire.plugin.version>
    <spotbugs.maven.plugin.version>4.7.3.5</spotbugs.maven.plugin.version>
    <maven.site.plugin.version>4.0.0-M9</maven.site.plugin.version>
  </properties>

  <repositories>
    <repository>
      <id>osgeo</id>
      <name>OSGeo Release Repository</name>
      <url>https://repo.osgeo.org/repository/release/</url>
    </repository>
  </repositories>

  <dependencyManagement>
    <dependencies>
      <!--SPRING FRAMEWORK-->
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter</artifactId>
        <version>${spring.boot.parent.version}</version>
      </dependency>
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-web</artifactId>
        <version>${spring.boot.parent.version}</version>
      </dependency>
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-webflux</artifactId>
        <version>${spring.boot.parent.version}</version>
      </dependency>
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-data-jpa</artifactId>
        <version>${spring.boot.parent.version}</version>
      </dependency>
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-cache</artifactId>
        <version>${spring.boot.parent.version}</version>
      </dependency>
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-validation</artifactId>
        <version>${spring.boot.parent.version}</version>
      </dependency>
      <dependency>
        <groupId>org.springdoc</groupId>
        <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
        <version>${springdoc.openapi.starter.webmvc.ui.version}</version>
      </dependency>
      <dependency>
        <groupId>org.telegram</groupId>
        <artifactId>telegrambots-spring-boot-starter</artifactId>
        <version>${telegrambots.spring.boot.starter.version}</version>
      </dependency>

      <!--USEFUL TOOLS-->
      <dependency>
        <groupId>org.projectlombok</groupId>
        <artifactId>lombok</artifactId>
        <version>${lombok.version}</version>
        <optional>true</optional>
      </dependency>
      <dependency>
        <groupId>org.mapstruct</groupId>
        <artifactId>mapstruct</artifactId>
        <version>${mapstruct.version}</version>
      </dependency>
      <dependency>
        <groupId>javax.cache</groupId>
        <artifactId>cache-api</artifactId>
        <version>${javax.cache.version}</version>
      </dependency>
      <dependency>
        <groupId>org.ehcache</groupId>
        <artifactId>ehcache</artifactId>
        <version>${org.ehcache.version}</version>
      </dependency>
      <dependency>
        <groupId>org.locationtech.proj4j</groupId>
        <artifactId>proj4j</artifactId>
        <version>${proj4j.version}</version>
      </dependency>
      <dependency>
        <groupId>org.locationtech.proj4j</groupId>
        <artifactId>proj4j-epsg</artifactId>
        <version>${proj4j.version}</version>
      </dependency>
      <dependency>
        <groupId>com.github.alexdlaird</groupId>
        <artifactId>java-ngrok</artifactId>
        <version>${java.ngrok.version}</version>
      </dependency>
      <dependency>
        <groupId>org.aspectj</groupId>
        <artifactId>aspectjweaver</artifactId>
        <version>${aspectj.version}</version>
      </dependency>
      <dependency>
        <groupId>org.openapitools</groupId>
        <artifactId>jackson-databind-nullable</artifactId>
        <version>${jackson.databind.nullable.version}</version>
      </dependency>
      <dependency>
        <groupId>md.fuel.contract</groupId>
        <artifactId>contract-generator</artifactId>
        <version>${contract.generator.version}</version>
      </dependency>
      <dependency>
        <groupId>com.github.spotbugs</groupId>
        <artifactId>spotbugs</artifactId>
        <version>${spotbugs.version}</version>
      </dependency>
      <dependency>
        <groupId>io.swagger.core.v3</groupId>
        <artifactId>swagger-annotations-jakarta</artifactId>
        <version>${swagger.annotations.jakarta.version}</version>
      </dependency>
      <dependency>
        <groupId>jakarta.validation</groupId>
        <artifactId>jakarta.validation-api</artifactId>
        <version>${jakarta.validation.api.version}</version>
      </dependency>

      <!--DATABASE-->
      <dependency>
        <groupId>org.postgresql</groupId>
        <artifactId>postgresql</artifactId>
        <version>${postgresql.version}</version>
      </dependency>
      <dependency>
        <groupId>com.h2database</groupId>
        <artifactId>h2</artifactId>
        <version>${h2.version}</version>
        <scope>runtime</scope>
      </dependency>

      <!--TEST-->
      <dependency>
        <groupId>org.mockito</groupId>
        <artifactId>mockito-inline</artifactId>
        <version>${mockito.inline.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>com.github.tomakehurst</groupId>
        <artifactId>wiremock-jre8-standalone</artifactId>
        <version>${wiremock.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-test</artifactId>
        <version>${spring.boot.parent.version}</version>
        <scope>test</scope>
        <exclusions>
          <exclusion>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
          </exclusion>
        </exclusions>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>${maven.compiler.plugin.version}</version>
        </plugin>

        <plugin>
          <groupId>org.jacoco</groupId>
          <artifactId>jacoco-maven-plugin</artifactId>
          <version>${jacoco.maven.plugin.version}</version>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>${maven.surefire.plugin.version}</version>
        </plugin>

        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>build-helper-maven-plugin</artifactId>
          <version>${builder.helper.maven.plugin.version}</version>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-failsafe-plugin</artifactId>
          <version>${maven.failsafe.plugin.version}</version>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-checkstyle-plugin</artifactId>
          <version>${maven.checkstyle.plugin.version}</version>
        </plugin>

        <plugin>
          <groupId>org.openapitools</groupId>
          <artifactId>openapi-generator-maven-plugin</artifactId>
          <version>${openapi.generator.maven.plugin.version}</version>
        </plugin>

        <plugin>
          <groupId>com.github.spotbugs</groupId>
          <artifactId>spotbugs-maven-plugin</artifactId>
          <version>${spotbugs.maven.plugin.version}</version>
        </plugin>

        <plugin>
          <groupId>org.owasp</groupId>
          <artifactId>dependency-check-maven</artifactId>
          <version>${dependency.check.maven.version}</version>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-site-plugin</artifactId>
          <version>${maven.site.plugin.version}</version>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

</project>
